--- a/n3bOptimizations/PluginControl.xaml
+++ b/n3bOptimizations/PluginControl.xaml
@@ -7,49 +7,64 @@
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" SharedSizeGroup="Labels"/>
-            <ColumnDefinition Width="Auto" SharedSizeGroup="Buttons"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-
-        <TextBlock Grid.Column="0" Grid.Row ="0" VerticalAlignment="Center" Text="Optimizations Plugin" FontWeight="Bold" FontSize="16" Grid.ColumnSpan="2" Margin="5"/>
         
-        <TextBlock Grid.Column="0" Grid.Row ="1" VerticalAlignment="Center" Text="Gas Tanks" FontWeight="Medium" FontSize="14" Grid.ColumnSpan="2" Margin="5"/>
-
-        <TextBlock Grid.Column="0" Grid.Row ="2" VerticalAlignment="Center" Text="Send batch update every" Margin="5"/>
-        <TextBox Name="PerTicks" Grid.Column="1" Grid.Row ="2" Margin="5" Text="{Binding PerTicks}" Width="30" />
-        <TextBlock Grid.Column="2" Grid.Row ="2" VerticalAlignment="Center" Text="ticks" Margin="5"/>
-
-        <TextBlock Grid.Column="0" Grid.Row ="3" VerticalAlignment="Center" Text="Total batches" Margin="5"/>
-        <TextBox Name="Batches" Grid.Column="1" Grid.Row ="3" Margin="5" Text="{Binding Batches}"/>
-
-        <TextBlock Grid.Column="0" Grid.Row ="4" VerticalAlignment="Center" Text="Threshold 1" Margin="5"/>
-        <TextBox Name="Threshold1" Grid.Column="1" Grid.Row ="4" Margin="5" Text="{Binding Threshold1}"/>
-        <TextBlock Grid.Column="2" Grid.Row ="4" VerticalAlignment="Center" Text="% of tank capacity" Margin="5"/>
+        <GroupBox Header="Gas Tanks" Margin="10" Padding="10" Grid.Row="0">
+            <StackPanel>
+                <CheckBox Margin="3" Name="GasTankEnabled" VerticalAlignment="Center" VerticalContentAlignment="Center" IsChecked="{Binding GasTankEnabled}">
+                    <TextBlock Text="Enabled" VerticalAlignment="Center" />
+                </CheckBox>
+                <StackPanel Orientation="Horizontal">
+                    <TextBox Margin="3" VerticalContentAlignment="Center" Name="GasTankInterval" Text="{Binding GasTankInterval}" Width="30" Height="20" />
+                    <Label Margin="3" VerticalContentAlignment="Center">ms single batch update</Label>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <TextBox Margin="3" VerticalContentAlignment="Center" Name="GasTankBatches" Text="{Binding GasTankBatches}" Width="30" Height="20" />
+                    <Label Margin="3" VerticalContentAlignment="Center">total batches</Label>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <TextBox Margin="3" VerticalContentAlignment="Center" Name="GasTankThreshold1" Text="{Binding GasTankThreshold1}" Width="30" Height="20" />
+                    <Label Margin="3" VerticalContentAlignment="Center">% Threshold 1 (upper)</Label>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <TextBox Margin="3" VerticalContentAlignment="Center" Name="GasTankThreshold2" Text="{Binding GasTankThreshold2}" Width="30" Height="20" />
+                    <Label Margin="3" VerticalContentAlignment="Center">% Threshold 2 (lower)</Label>
+                </StackPanel>
+                <TextBlock TextWrapping="Wrap">In case fill ratio is decreasing and falls below threshold 1 and the next update is expected to be below threshold 2 (projected value) plugin starts sending updates immediately</TextBlock>
+            </StackPanel>
+        </GroupBox>
         
-        <TextBlock Grid.Column="0" Grid.Row ="5" VerticalAlignment="Center" Text="Threshold 2" Margin="5"/>
-        <TextBox Name="Threshold2" Grid.Column="1" Grid.Row ="5" Margin="5" Text="{Binding Threshold2}"/>
-        <TextBlock Grid.Column="2" Grid.Row ="5" VerticalAlignment="Center" Text="% of tank capacity" Margin="5"/>
+        <GroupBox Header="Inventories" Margin="10" Padding="10" Grid.Row="1">
+            <StackPanel Width="Auto">
+                <CheckBox Margin="3" Name="InventoryEnabled" VerticalAlignment="Center" VerticalContentAlignment="Center" IsChecked="{Binding InventoryEnabled}">
+                    <TextBlock Text="Enabled" VerticalAlignment="Center" />
+                </CheckBox>
+                <StackPanel Orientation="Horizontal">
+                    <TextBox Margin="3" VerticalContentAlignment="Center" Name="InventoryInterval" Text="{Binding InventoryInterval}" Width="30" Height="20" />
+                    <Label Margin="3" VerticalContentAlignment="Center" MaxWidth="450">
+                        <TextBlock TextWrapping="Wrap">ms throttling. Applied to mass/volume of static grids, and inventory contents of all grids.</TextBlock>
+                    </Label>
+                </StackPanel>
+            </StackPanel>
+        </GroupBox>
         
-        
-        
-        <TextBlock Grid.Column="0" Grid.Row ="6" VerticalAlignment="Center" Text="Inventories" FontWeight="Medium" FontSize="14" Grid.ColumnSpan="2" Margin="5"/>
-        <TextBlock Grid.Column="0" Grid.Row ="7" VerticalAlignment="Center" Text="Updates per" Margin="5"/>
-        <TextBox Name="InventoryThrottle" Grid.Column="1" Grid.Row ="7" Margin="5" Text="{Binding InventoryThrottle}"/>
-        <TextBlock Grid.Column="2" Grid.Row ="7" VerticalAlignment="Center" Text="ms (only static grids)" Margin="5"/>
+        <GroupBox Header="Production Blocks" Margin="10" Padding="10" Grid.Row="2">
+            <StackPanel>
+                <CheckBox Margin="3" Name="ProductionBlockEnabled" VerticalAlignment="Center" VerticalContentAlignment="Center" IsChecked="{Binding ProductionBlockEnabled}">
+                    <TextBlock Text="Enabled" VerticalAlignment="Center" />
+                </CheckBox>
+                <TextBlock TextWrapping="Wrap">When enabled it stops Refineries from spawning large amount of production queue events, that don't seem to be used anywhere.</TextBlock>
+            </StackPanel>
+        </GroupBox>
 
-        <Button Grid.Column="4" Grid.Row="8" Content="Save Config" Margin="5" Click="SaveButton_OnClick" />
+        <Button Grid.Row="100" Content="Save Config" Margin="5" Click="SaveButton_OnClick" Width="100" />
+        
     </Grid>
 </UserControl>
